# crewai-insta-workflow

./: README.md  content.md  content_vars.md  pyproject.toml  report.md
src/insta_workflow/: crew.py  main.py
src/insta_workflow/config/: agents.yaml  tasks.yaml
src/insta_workflow/models/: content_models.py
src/insta_workflow/tools/: serper_tool.py
