[project]
name = "insta_workflow"
version = "0.1.0"
description = "insta-workflow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "agentops>=0.4.16",
    "crewai[tools]>=0.130.0,<1.0.0",
    "opik>=1.7.40",
]

[project.scripts]
insta_workflow = "insta_workflow.main:run"
run_crew = "insta_workflow.main:run"
train = "insta_workflow.main:train"
replay = "insta_workflow.main:replay"
test = "insta_workflow.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
